adding the auth process for backend

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,7 @@ app.receipts.storage-dir=receipts
 
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
+# JWT secret for dev (base64). Replace with env var or a secure secret for production.
+app.jwt.secret=U3VwZXJTZWNyZXRLZXlGb3JFeGFtcGxlMTIzNDU2Nzg5MA==
+app.jwt.expiration-ms=3600000
+spring.security.debug=true
