--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,10 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
+spring.flyway.enabled=true
+spring.flyway.locations=classpath:db/migration
+spring.flyway.baseline-on-migrate=true
+
 server.port=8080
 
 # receipt upload
@@ -19,4 +23,4 @@ spring.servlet.multipart.max-request-size=10MB
 # JWT secret for dev (base64). Replace with env var or a secure secret for production.
 app.jwt.secret=U3VwZXJTZWNyZXRLZXlGb3JFeGFtcGxlMTIzNDU2Nzg5MA==
 app.jwt.expiration-ms=3600000
-spring.security.debug=true
+
